--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -17,6 +17,7 @@ jobs:
           ansible-galaxy collection install community.kubernetes
           RELEASE_VERSION=v0.8.0
           VERSION=${GITHUB_REF#refs/*/}
-          curl -OJL https://github.com/operator-framework/operator-sdk/releases/download/${RELEASE_VERSION}/operator-sdk-${RELEASE_VERSION}-x86_64-linux-gnu
-          operator-sdk build flanksource/awx-operator:$VERSION
+          wget -O operator-sdk https://github.com/operator-framework/operator-sdk/releases/download/${RELEASE_VERSION}/operator-sdk-${RELEASE_VERSION}-x86_64-linux-gnu
+          chmod +x operator-sdk
+          ./operator-sdk build flanksource/awx-operator:$VERSION
           docker push flanksource/awx-operator:$VERSION
